--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -34,8 +34,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
-      - name: Build
+      - name: Build library
         run: npm run build
+      
+      - name: Build examples
+        run: npm run build:examples
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -43,7 +46,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './examples'
+          path: './dist'
       
       - name: Deploy to GitHub Pages
         id: deployment
