--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
   "bugs": {
     "url": "https://github.com/jcroucher/alpineblocks/issues"
   },
+  "peerDependencies": {
+    "alpinejs": "^3.14.1"
+  },
   "dependencies": {
-    "alpinejs": "^3.14.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -54,10 +56,25 @@
     "@parcel/optimizer-terser": "^2.15.4",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.1.4",
+    "alpinejs": "^3.14.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.12.0",
     "parcel-bundler": "^1.12.5",
     "wait-on": "^8.0.0"
-  }
+  },
+  "files": [
+    "dist/**/*",
+    "src/**/*",
+    "README.md",
+    "LICENSE"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.js"
+    },
+    "./styles": "./dist/index.css"
+  },
+  "types": "./dist/index.d.ts"
 }
