--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -39,18 +39,25 @@ jobs:
       
       - name: Build examples
         run: |
-          # Temporarily remove conflicting package.json entries
-          cp package.json package.json.bak
-          node -e "
-            const pkg = JSON.parse(require('fs').readFileSync('package.json', 'utf8'));
-            delete pkg.main;
-            delete pkg.module;
-            delete pkg.targets;
-            require('fs').writeFileSync('package.json', JSON.stringify(pkg, null, 2));
-          "
-          # Build examples
+          # Create temporary package.json for building examples
+          cat > package-examples.json << 'EOF'
+          {
+            "name": "alpineblocks-examples",
+            "version": "1.0.0",
+            "dependencies": {
+              "alpinejs": "^3.14.1",
+              "uuid": "^10.0.0"
+            },
+            "devDependencies": {
+              "parcel": "^2.12.0"
+            }
+          }
+          EOF
+          # Build examples with temporary package.json
+          mv package.json package.json.bak
+          mv package-examples.json package.json
           npx parcel build examples/index.html --public-url ./ --no-optimize
-          # Restore package.json
+          # Restore original package.json
           mv package.json.bak package.json
       
       - name: Setup Pages
