chore: remove build files from git tracking and update .gitignore
- Remove dist/index.js and dist/index.esm.js from git tracking
- Update .gitignore to explicitly ignore these build output files
- Keep dist/ directory for GitHub Pages but ignore the library build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,13 @@ yarn-error.log*
 dist-dev/
 build/
 .parcel-cache/
-# Keep dist/ for GitHub Pages but ignore hashed build artifacts
+# Keep dist/ for GitHub Pages but ignore build artifacts
 !dist/
 dist/examples.*.css
 dist/examples.*.js
+dist/index.js
+dist/index.esm.js
+dist/index.css
 
 # Environment files
 .env
