--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "dev": "parcel examples/index.html --dist-dir ./dist-dev",
-    "build": "parcel build --target main --target module",
+    "build": "parcel build --target main --target module && npm run copy-css",
+    "copy-css": "cp src/frontend.css dist/ && cp src/editor.css dist/",
     "build:lib": "parcel build --target main --target module",
     "build:examples": "parcel build examples/index.html --public-url ./",
     "start": "parcel examples/index.html",
@@ -74,7 +75,9 @@
       "import": "./dist/index.esm.js",
       "require": "./dist/index.js"
     },
-    "./styles": "./dist/index.css"
+    "./styles": "./dist/index.css",
+    "./frontend.css": "./dist/frontend.css",
+    "./editor.css": "./dist/editor.css"
   },
   "types": "./dist/index.d.ts"
 }
