--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     }
   },
   "scripts": {
-    "dev": "parcel examples/index.html examples/example-usage.html --dist-dir ./dist-dev",
+    "dev": "npm run copy-layouts && parcel examples/index.html examples/example-usage.html --dist-dir ./dist-dev",
     "build": "parcel build --target main --target module && npm run copy-css",
     "copy-css": "cp src/frontend.css dist/ && cp src/editor.css dist/",
+    "copy-layouts": "mkdir -p ./dist-dev/layouts && cp -r examples/layouts/* ./dist-dev/layouts/",
     "build:lib": "parcel build --target main --target module",
     "build:examples": "parcel build examples/index.html examples/example-usage.html --public-url ./",
     "start": "parcel examples/index.html examples/example-usage.html",
