--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "copy-css": "cp src/frontend.css dist/ && cp src/editor.css dist/",
     "copy-layouts": "mkdir -p ./dist-dev/layouts && cp -r examples/layouts/* ./dist-dev/layouts/",
     "build:lib": "parcel build --target main --target module",
+    "build:watch": "parcel watch --target main --target module",
     "build:examples": "parcel build examples/index.html examples/example-usage.html --public-url ./",
     "start": "parcel examples/index.html examples/example-usage.html",
     "test": "jest",
